feat: add freelance

--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,6 @@
 
 \address{
 	d.chen@live.com \\
-	(+44) 7401 137229 \\
 	dchen.app \\
 	linkedin.com/in/daniel-chen-developer
 }
@@ -58,6 +57,10 @@ through a UI interface
 		\begin{itemize} 
 			\item Application developed using Next.js and Python that uses OpenAI large language models to generate custom Chinese learning material, pronunciation and translations for the user's exact fluency level based on previously known vocabulary
 			\item Developed custom asynchronous LLM chaining request strategy with Python asyncio to optimise serving of per word and sentence Chinese to English translations (20-30s total response time)
+		\end{itemize}
+		\item \textbf{Freelance Web Development} 
+		\begin{itemize} 
+			\item Custom responsive web development for small-medium sized businesses. On-page SEO and performance optimisation led to increased brand awareness and traction through Google search.
 		\end{itemize}
 	\end{rSection} 
 	
